# Compile-Time-HAL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE_SCOPE.md  MemoryAnalysis.sh  MemoryAnalysisResults.py  MemoryAnalysis_build.sh  NOTICE
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bootstrap-source.yml  build.yml
CHAL/: .cproject  .project  CMakeLists.txt  STM32L433RCTXP_FLASH.ld
CHAL/EWARM/: CHAL.ewd  CHAL.ewp  CHAL.ewt
CHAL/Src/: main.c
CHAL/bsl/include/: boardConfig.h  led.h  switch.h
CHAL/csl/include/: bits.h  hwReg.h  pin.h  port.h  rcc.h
CHAL/csl/src/: periMemMap.h  pin.c  port.c  rcc.c
CPPCTHAL/: .cproject  .project  CMakeLists.txt  project-description.json
CPPCTHAL/EWARM/: CPPCTHAL.ewp  CPPCTHAL.ewt  CPPCTHAL.icf
CPPCTHAL/Src/: main.cpp
CPPCTHAL/Startup/: startup_stm32l433rctxp.s
CPPCTHAL/bsl/include/: BoardConfig.h  Led.h  Switch.h
CPPCTHAL/cmake/: files.cmake  flags.cmake  target.cmake
CPPCTHAL/csl/include/: GpioConfig.h  HwReg.h  Pin.h  Port.h  RCC.h  periMemMap.h
CPPCTHAL23/: .project  CMakeLists.txt  MODERNIZATION.md  stm32l433xc_flash.ld
CPPCTHAL23/Src/: main.cpp
CPPCTHAL23/bsl/include/: BoardConfig.h  Led.h  Switch.h
CPPCTHAL23/csl/include/: GpioConfig.h  HwReg.h  Pin.h  RCC.h  periMemMap.h
CPPHAL/: .cproject  .project  CMakeLists.txt
CPPHAL/EWARM/: CPPHAL.ewp  CPPHAL.ewt  startup_stm32l433xx.s
CPPHAL/Src/: main.cpp
CPPHAL/bsl/include/: BindOnly.h  BoardConfig.h  Led.h  Switch.h
CPPHAL/csl/include/: HwReg.h  Pin.h  Port.h  RCC.h  bits.h
CPPHAL/csl/src/: Pin.cpp  Port.cpp  RCC.cpp
CT-HAL23/: .cproject  BUILD.md  README_CTHAL23.md
CT-HAL23/Src/: main.cpp
CT-HAL23/bsl/include/: BoardConfig.h  Led.h  Switch.h
CT-HAL23/csl/include/: GpioConfig.h  HwReg.h  Pin.h  Port.h  RCC.h
CubeMXHAL/: .cproject  .project  CMakeLists.txt  CubeMXHAL.ioc  STM32L433RCTXP_FLASH.ld
CubeMXHAL/Drivers/CMSIS/Include/: cmsis_gcc.h  cmsis_iccarm.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_sc000.h  core_sc300.h
CubeMXHAL/Drivers/STM32L4xx_HAL_Driver/: VERSION.md
CubeMXHAL/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal.h  stm32l4xx_hal_cortex.h  stm32l4xx_hal_def.h  stm32l4xx_hal_dma.h  stm32l4xx_hal_dma_ex.h  stm32l4xx_hal_exti.h  stm32l4xx_hal_flash.h  stm32l4xx_hal_flash_ex.h  stm32l4xx_hal_flash_ramfunc.h  stm32l4xx_hal_gpio.h  stm32l4xx_hal_gpio_ex.h  stm32l4xx_hal_i2c.h  stm32l4xx_hal_i2c_ex.h  stm32l4xx_hal_pwr.h  stm32l4xx_hal_pwr_ex.h  stm32l4xx_hal_rcc.h  stm32l4xx_hal_rcc_ex.h  stm32l4xx_hal_tim.h  stm32l4xx_hal_tim_ex.h  stm32l4xx_hal_uart.h  stm32l4xx_hal_uart_ex.h
CubeMXHAL/Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
CubeMXHAL/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c  stm32l4xx_hal_gpio.c
CubeMXHAL/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
CubeMXHAL/Src/: main.c
CubeMXHAL/bsl/include/: boardConfig.h  led.h  switch.h
CubeMXLL/: CMakeLists.txt  CubeMXLL.ioc  README.md
CubeMXLL/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l433xx.h  stm32l4xx.h  system_stm32l4xx.h
CubeMXLL/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm1.h  core_cm23.h  core_cm33.h  core_cm7.h  mpu_armv7.h  mpu_armv8.h
CubeMXLL/Drivers/STM32L4xx_HAL_Driver/: VERSION.md
CubeMXLL/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_ll_bus.h  stm32l4xx_ll_gpio.h
CubeMXLL/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_ll_gpio.c
CubeMXLL/Inc/: main.h
CubeMXLL/Src/: main.c  startup_stm32l433xx.S
CubeMXLL/Startup/: startup_stm32l433rctxp.s
CubeMXLL/bsl/include/: boardConfig.h  led.h  switch.h
Examples/: README.md
Examples/MultiCall/: README.md  chal.c  cppcthal.cpp  cppcthal23.cpp  cpphal.cpp  cthal23.cpp  cubemx-hal.c  cubemx-ll.c  nohal.c
Examples/MultiExCall/: README.md  cppcthal.cpp  cpphal.cpp  cthal23.cpp  cubemx-hal.c  cubemx-ll.c  nohal.c
Examples/Single/: chal.c  cppcthal.cpp  cpphal.cpp  cthal23.cpp  cubemx-hal.c  cubemx-ll.c  nohal.c
NoHAL/: .cproject  .project  CMakeLists.txt
NoHAL/EWARM/: NoHAL.ewd  NoHAL.ewp  NoHAL.ewt
NoHAL/Src/: direct_gpio.h  main.c  sysmem.c
NoHAL/bsl/include/: boardConfig.h  led.h  switch.h
bootstrap/: READY  rev11-src.b64  rev11-xz-part00.b64  rev11-xz-part01.b64  rev11-xz-part02.b64  rev11-xz-part03.b64  rev11-xz-part04.b64  rev11-xz-part05.b64  rev11.part00.b64  small-part00.b64  small-part01.b64  small-part02.b64  small-part03.b64  small-part04.b64  small-part05.b64  small-part06.b64  small-part08.b64  small-part09.b64  small-part10.b64  source.part00  source.part01  source.part02  source.part03  source.part04  transport-note.txt
cmake/: CompileTimeHal.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake
